# BouncyBall-linux

./: CMakeLists.txt  LICENSE  README.md
include/: ball.h  block.h  drawable.h  game.h  level.h  moveable.h  player.h  spike_block.h
lvl/: 2.lvl
pics/: StoneBlockBad.tga  eichriedler.tga
shader/: TextureFragmentShader.fragmentshader  TransformVertexShader2.vertexshader
src/: ball.cpp  block.cpp  drawable.cpp  enemy.cpp  game.cpp  good_smiley.cpp  level.cpp  main.cpp  moveable.cpp  player.cpp  spike_block.cpp  stone_block.cpp
src/animation/: animation.cpp  animation.h  animation_bounce.cpp  animation_bounce.h  animation_rot.cpp  animation_rot.h
src/ball/: ball.cpp  ball.h  enemy.cpp  enemy.h  good_smiley.cpp  player.cpp
src/base/: drawable.cpp  drawable.h  game.cpp  game.h  level.h  moveable.cpp  moveable.h  texture.cpp  texture.h
src/block/: block.cpp  block.h  spike_block.cpp  spike_block.h  stone_block.cpp
